Code cleaning.